--- a/templates/addTask.html
+++ b/templates/addTask.html
@@ -5,7 +5,11 @@
 {% block body %}
     <form action="{% url 'add_task' %}" method="post">
         {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit">add</button>
+    <div class="errors">{{ form.non_field_errors }}</div>
+        {% for f in form %}
+        <p><label for="{{ f.id_for_label }}">{{ f.label }}</label>{{ f }}</p>
+
+        {% endfor %}
+        <input type="submit" value="Submit">
     </form>
 {% endblock %}
