--- a/templates/index.html
+++ b/templates/index.html
@@ -1,59 +1,91 @@
 <!DOCTYPE html>
-<html>
 <head>
+<meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
     {% block content %}
-    <title></title>
+        <title></title>
     {% endblock %}
-<style>
-    table {
-  border-collapse: collapse;
-  width: 100%;
-}
+    <style>
+        input[type=text], select {
+            width: 100%;
+            padding: 12px 20px;
+            margin: 8px 0;
+            display: inline-block;
+            border: 1px solid #ccc;
+            border-radius: 4px;
+            box-sizing: border-box;
+        }
 
-th, td {
-  text-align: left;
-  padding: 8px;
-}
+        input[type=submit] {
+            width: 100%;
+            background-color: #4CAF50;
+            color: white;
+            padding: 14px 20px;
+            margin: 8px 0;
+            border: none;
+            border-radius: 4px;
+            cursor: pointer;
+        }
 
-tr:nth-child(even){background-color: #f2f2f2}
+        input[type=submit]:hover {
+            background-color: #45a049;
+        }
 
-th {
-  background-color: #04AA6D;
-  color: white;
-}
-    ul {
-      list-style-type: none;
-      margin: 0;
-      padding: 0;
-      overflow: hidden;
-      border: 1px solid #e7e7e7;
-      background-color: #f3f3f3;
-    }
+        div {
+            border-radius: 5px;
+            background-color: #f2f2f2;
+            padding: 20px;
+        }
+        table {
+            border-collapse: collapse;
+            width: 100%;
+        }
 
-    li {
-      float: left;
-    }
+        th, td {
+            text-align: left;
+            padding: 8px;
+        }
 
-    li a {
-      display: block;
-      color: #666;
-      text-align: center;
-      padding: 14px 16px;
-      text-decoration: none;
-    }
+        tr:nth-child(even){background-color: #f2f2f2}
 
-    li a:hover:not(.active) {
-      background-color: #ddd;
-    }
+        th {
+            background-color: #04AA6D;
+            color: white;
+        }
+        ul {
+            list-style-type: none;
+            margin: 0;
+            padding: 0;
+            overflow: hidden;
+            border: 1px solid #e7e7e7;
+            background-color: #f3f3f3;
+        }
 
-    li a.active {
-      color: white;
-      background-color: #04AA6D;
-    }
-</style>
+        li {
+            float: left;
+        }
+
+        li a {
+            display: block;
+            color: #666;
+            text-align: center;
+            padding: 14px 16px;
+            text-decoration: none;
+        }
+
+        li a:hover:not(.active) {
+            background-color: #ddd;
+        }
+
+        li a.active {
+            color: white;
+            background-color: #04AA6D;
+        }
+    </style>
 </head>
 <body>
-
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p" crossorigin="anonymous"></script>
 <ul>
     <li><a class="active" href="/">Home</a></li>
     <li><a class="active" href="/tasks">tasks</a></li>
@@ -62,4 +94,3 @@ th {
 {% endblock %}
 
 </body>
-</html>
