--- a/templates/tasks.html
+++ b/templates/tasks.html
@@ -13,15 +13,15 @@
     <th>Deadline</th>
     <th>done</th>
   </tr>
+{% for task in tasks %}
 <tr>
-    {% for task in tasks %}
         <th>{{ task.title }}</th>
         <th>{{ task.description }}</th>
         <th>{{ task.created }}</th>
         <th>{{ task.deadline }}</th>
         <th>{{ task.done }}</th>
-    {% endfor %}
 </tr>
+{% endfor %}
 </table>
-   <li><a class="button" href="/add_task">add new task</a></li>
+   <li><a class="button" href="{% url 'add_task' %}">add new task</a></li>
 {% endblock %}
